# MacroArc

./: .gitignore  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  autoclicker.rs  lib.rs  macro_player.rs  overlay.rs  recorder.rs  types.rs
src/components/layout/: AboutButton.tsx  AppShell.tsx  OverlayToggle.tsx  ThemeToggle.tsx
src/components/overlay/: OverlayBubble.tsx  OverlayCanvas.tsx  OverlayPanelWindow.tsx
src/components/panels/: ActivityFeedPanel.tsx  AutoClickerPanel.tsx  HeroBanner.tsx  InsightGrid.tsx  MacroEditModal.tsx  MacroLibraryPanel.tsx  MacroRecorderPanel.tsx
src/components/shared/: HotkeyField.tsx  NumericInputField.tsx  PanelSurface.tsx  SectionHeader.tsx
src/data/: seedMacros.ts
src/hooks/: useAutoClicker.ts  useMacroEngine.ts  useOverlayMode.ts  useTheme.tsx
src/hooks/macroEngine/: constants.ts  eventTransforms.ts  helpers.ts  hotkeyUtils.ts  storage.ts
src/utils/: bridge.ts  format.ts  hotkeys.ts  macroTypes.ts
