[package]
name = "macroarc"
version = "0.1.0"
description = "A Tauri App"
authors = ["Jumble"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.1"
parking_lot = "0.12"
rand = "0.8"
rdev = "=0.5.1"
tauri-plugin-global-shortcut = "2"

[patch.crates-io]
schemars = { path = "../vendor/schemars-0.8.22" }

[target.'cfg(windows)'.dependencies]
device_query = "1.1"

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }

